--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ body {
   color: #757575;
 }
 
+/* header */
+
 .header {
   width: 100%;
   background: #ffffff;
@@ -50,8 +52,8 @@ body {
   margin: auto 25px;
 }
 
-.nav li a,
-.info a {
+.nav-list-item a,
+.info-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
@@ -60,26 +62,40 @@ body {
   text-decoration: none;
 }
 
-.nav li a.current,
-.info a.current {
-  color: #2196f3;
-}
-
 .info {
   display: inline-flex;
   margin-left: auto;
 }
 
-.info a {
+.info-link {
   margin: auto 25px;
-}
-
-.info a.tell {
   color: #757575;
 }
 
+.info-link:hover, .info-link:active {
+  color: #2196F3;
+}
+
+.info-link:hover svg, .info-link:active svg {
+  stroke: #2196F3;
+}
+
+.nav-list-item a:hover, .nav-list-item a:active {
+  color: #2196F3;
+}
+
+
+
+/* main */
+
+/* hero */
+
+
 .page-section {
-  background: #2f303a;
+  background: url("../img/background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 600px;
   width: 100%;
   display: flex;
@@ -119,6 +135,11 @@ body {
   letter-spacing: 0.06em;
   color: #ffffff;
   padding: 10px 32px;
+}
+
+.main-button-link {
+  text-decoration: none;
+  color: white;
 }
 
 .subtitle {
@@ -165,6 +186,8 @@ body {
   padding-bottom: 50px;
 }
 
+/* Наша команда  */
+
 .team {
   display: flex;
   justify-content: space-between;
@@ -197,9 +220,37 @@ body {
   color: #212121;
 }
 
-.card p {
-  margin: 0 0 25px;
+.social-icons {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 16px 30px;
 }
+
+.social-item {
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.social-item:hover {
+  background-color: #2196F3;
+  border-radius: 50%;
+}
+
+.social-item:hover svg {
+  fill: #ffffff;
+}
+
+.social-item svg {
+  fill: #AFB1B8;
+}
+
+
+/* footer */
+
 
 footer {
   padding: 72px 5%;
